# Ascii-Player

./: CMakeLists.txt  CMakeListsBeta.txt  CMakePresets.json  CMakePresetsLinux.json  README.md  ascii-player.desktop  ascii_render.cpp  ascii_render.hpp  connect.txt  icon.rc  main.cpp  main_linux.cpp
